--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,11 +2,11 @@
 #user  nobody;
 worker_processes  1;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+error_log  logs/error.log;
+error_log  logs/error.log  notice;
+error_log  logs/error.log  info;
 
-#pid        logs/nginx.pid;
+pid        logs/nginx.pid;
 
 
 events {
@@ -16,43 +16,62 @@ events {
 
 http {
     include       mime.types;
+    include /home/uladzislau/nginx/conf/vhosts/backend.conf;
     default_type  application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    access_log  logs/access.log  ;
 
     sendfile        on;
     #tcp_nopush     on;
-
+    vhost_traffic_status_zone;
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
     #gzip  on;
 
-    server {
-        listen       80;
-        server_name  localhost;
-
+#    server {
+#        listen       8080;
+#        server_name  192.168.122.210;
+#
         #charset koi8-r;
-
         #access_log  logs/host.access.log  main;
+#
+#        location / {
+#            root   html;
+#            index  index.html index.htm;
+#	           }
 
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
+#	location /pictures/ {
+#	    alias html/resources/pictures/; 
+#			    }
+	
+#	location /status {
+           
+#	    vhost_traffic_status_display;
+#            vhost_traffic_status_display_format html;
+#	    allow 192.168.122.210;
+#	    deny all;
+#	    	         }
 
-        #error_page  404              /404.html;
+#	location /admin {
+#	   try_files $uri /admin.html;
+#	   auth_basic "restricted";
+#	   auth_basic_user_file /home/uladzislau/nginx/conf/htpasswd;
+#		}	
+	
+
+#        error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
         #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+#        error_page   500 502 503 504  /50x.html;
+#        location = /50x.html {
+#            root   html;
+#        }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
@@ -114,4 +133,4 @@ http {
     #    }
     #}
 
-}
+
