--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -16,7 +16,9 @@ events {
 
 http {
     include       mime.types;
-    include /home/uladzislau/nginx/conf/vhosts/backend.conf;
+   #include /home/uladzislau/nginx/conf/vhosts/backend.conf;
+    include /home/uladzislau/nginx/conf/upstreams/web.conf;
+    include /home/uladzislau/nginx/conf/vhosts/lb.conf;
     default_type  application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
