--- a/conf/vhosts/backend.conf
+++ b/conf/vhosts/backend.conf
@@ -1,39 +1,39 @@
-    server {
-        listen       8080;
-        server_name  192.168.122.210;
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        location / {
-            root   html;
-            index  index.html index.htm;
-                   }
-
-        location /pictures/ {
-            alias html/resources/pictures/;
-                            }
-
-        location /status {
-
-            vhost_traffic_status_display;
-            vhost_traffic_status_display_format html;
-            allow 192.168.122.210;
-            deny all;
+upstream 192.168.122.210 {
+            server 192.168.122.251:8080;
+            server 192.168.122.189:8080 weight=3;
                          }
 
-        location /admin {
-           try_files $uri /admin.html;
-           auth_basic "restricted";
-           auth_basic_user_file /home/uladzislau/nginx/conf/htpasswd;
-                }
-	error_page  404              /404.html;
+	server {
+        listen       8080;
+	server_name  192.168.122.210;
+	add_header Custom-Header backend_srv;
+	
+	return 301 https://$host$request_uri;
+        
+		}
 
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+	
+	server {
+	listen       8443 ssl;
+	server_name 192.168.122.210;
+	ssl_certificate /home/uladzislau/server.crt;
+        ssl_certificate_key /home/uladzislau/server.key;
+	
+
+
+	location / {
+            proxy_pass http://192.168.122.210;
+                  }
+
+       location /status {
+
+          vhost_traffic_status_display;
+          vhost_traffic_status_display_format html;
+         # allow 192.168.122.210;
+         # deny all;
+                         }
+
+	proxy_intercept_errors on;     
+	error_page  404              /err.html;
+
 }	
